fixed html alt text

--- a/html_Website/IoT.html
+++ b/html_Website/IoT.html
@@ -130,7 +130,7 @@
                 </p>
             </section>
             <section class="second-section">
-                <img src="/images/IoT_smartCity.jpeg" alt="city with differnt technological icons">
+                <img src="/images/IoT_smartCity.jpeg" alt="City with differnt technological icons">
                 <div class="second-section-body">
                     <h2>IOT SMART CITIES</h2>
                     <p>
