--- a/html_Website/cloud.html
+++ b/html_Website/cloud.html
@@ -114,7 +114,7 @@
         </p>
         <div class="body-content">
             <section class="first-section">
-                <img src="/images/bigData.jpeg" alt="big data device icons">
+                <img src="/images/bigData.jpeg" alt="Big data device icons">
                 <h2>ClOUD COMPUTING IN BIG DATA</h2>
                 <p>
                     Big Data Analytics makes up the second leg of the Next Internet. In spite of the proliferation of fancy new titles, 
