--- a/html_Website/virtualReality.html
+++ b/html_Website/virtualReality.html
@@ -162,7 +162,7 @@
     <!--This is the bottom of the webpage-->
     <footer>
         <div class="wrp-content-footer">
-            <img class="logo" src="/images/logo-white.png" alt="LFuture Technologies logo">
+            <img class="logo" src="/images/logo-white.png" alt="Future Technologies logo">
             <div class="wrp-links">
                 <!--These are the footer links found at the bottom of the page.-->
                 <ul>
